--- a/blog/templates/blog/partials/_header.html
+++ b/blog/templates/blog/partials/_header.html
@@ -37,7 +37,7 @@
           <nav class="menu">
             <ul class="menu-items">
               
-              {% for link in site_setup.menulink_set.all %}
+              {% for link in site_setup.menu.all %}
                 <li class="menu-item">
                   
                   {% if link.new_tab %}
