--- a/blog/static/blog/css/style.css
+++ b/blog/static/blog/css/style.css
@@ -141,7 +141,7 @@ pre {
   max-width: 100%;
   overflow-x: auto;
   line-height: var(--lh-mono);
-  font-size: var(--fs-sm);
+  font-size: var(--fs-smlr);
 }
 
 pre,
@@ -158,6 +158,12 @@ input[type='search']::-webkit-search-results-decoration {
 
 img {
   margin: 0 auto;
+}
+
+/* CodeMirror */
+.CodeMirror {
+  height: auto !important;
+  font-size: var(--fs-smlr) !important;
 }
 
 /* Blog */
