--- a/blog/templates/blog/pages/index.html
+++ b/blog/templates/blog/pages/index.html
@@ -13,7 +13,7 @@
                 </div>
             {% else %}
                 <div class="not-found center">
-                    <h1>Nada encontrado 😔</h1>
+                    <h1>Nenhum post encontrado aqui 🥲</h1>
                     <p>
                     Não encontrei nada nesse link, por favor, clique em outro 
                     link do nosso blog ou vá para a 
