Continuous testing in models, visualizations and administration - 3

--- a/blog/templates/blog/partials/_header.html
+++ b/blog/templates/blog/partials/_header.html
@@ -20,7 +20,7 @@
                 <input
                   class="search-input"
                   type="search"
-                  name="search"
+                  name="q"
                   id="search-input"
                   placeholder="Search"
                   value="{{ search_value }}"
